cmake_minimum_required(VERSION 3.20)
add_compile_definitions(FMT_HEADER_ONLY)
set(ARCH_NAME "x64")
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
	set(ARCH_NAME "x64")
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
	set(ARCH_NAME "x86")
endif()
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
link_libraries("${CMAKE_SOURCE_DIR}/vendor/libhat/lib/${ARCH_NAME}/libhat.lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/${ARCH_NAME}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/${ARCH_NAME}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/${ARCH_NAME}")
add_subdirectory(projects/Library)
add_subdirectory(projects/Executable)
target_include_directories(Library PUBLIC "include")
target_include_directories(Library PUBLIC "vendor/fmt/include")
target_include_directories(Library PUBLIC "vendor/libhat/include")
add_dependencies(Executable Library)